--- a/libreria/templates/libros/index.html
+++ b/libreria/templates/libros/index.html
@@ -27,7 +27,10 @@
                             <td>Aprende Django</td>
                             <td>Imagen.jpg</td>
                             <td>Libro que explica todo sobre el framework Django</td>
-                            <td>Editar | Eliminar</td>
+                            <td>
+                                <a name="" id="" class="btn btn-info" href="{% url 'editar' %}" role="button">Editar</a>
+                                <a name="" id="" class="btn btn-info" href="#" role="button">Borrar</a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
