--- a/libreria/templates/libros/crear.html
+++ b/libreria/templates/libros/crear.html
@@ -4,22 +4,17 @@
 
 {% block contenido %}
 
-    <form method="post" class="mt-4">
-        
-        <div class="mb-3">
-            <label for="titulo" class="form-label">Título</label>
-            <input type="text" class="form-control" id="titulo">
-        </div>
-        <div class="mb-3">
-            <label for="imagen" class="form-label">Imágen</label>
-            <input type="file" accept="image/*" class="form-control" id="imagen">
-        </div>
-        <div class="mb-3">
-            <label for="descripcion" class="form-label">Descripción</label>
-            <input type="text" class="form-control" id="descripcion">
-        </div>
-        <button type="submit" class="btn btn-primary">Crear</button>
-
-    </form>
+<div class="card">
+    <div class="card-header">
+        Crear un Libro
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">Datos del Libro</h4>
+        {% include 'libros/formulario.html' %}
+    </div>
+    <div class="card-footer text-muted">
+        Footer
+    </div>
+</div>
 
 {% endblock %}
