--- a/libreria/templates/paginas/inicio.html
+++ b/libreria/templates/paginas/inicio.html
@@ -2,4 +2,14 @@
 
 {% block titulo %} Inicio {% endblock %}
 
-{% block contenido %} Bienvenidos a la librería {% endblock %}
+{% block contenido %}
+
+<div class="p-5 mb-4 bg-light rounded-3">
+    <div class="container-fluid py-5">
+      <h1 class="display-5 fw-bold">Bienvenidos a la librería</h1>
+      <p class="col-md-8 fs-4">Empezar a ingresar libros</p>
+      <button class="btn btn-primary btn-lg" type="button">Empezar</button>
+    </div>
+</div>
+
+{% endblock %}
