Proyecto Finalizado version-1

--- a/libreria/templates/base.html
+++ b/libreria/templates/base.html
@@ -14,8 +14,8 @@
             <a class="nav-item nav-link active" href="{% url 'inicio' %}"> Inicio </a>
             <a class="nav-item nav-link active" href="{% url 'libros' %}"> Libros </a>
             <a class="nav-item nav-link active" href="{% url 'crear' %}"> Crear </a>
-            <a class="nav-item nav-link active" href="{% url 'editar' %}"> Editar </a>
             <a class="nav-item nav-link active" href="{% url 'nosotros' %}"> Nosotros </a>
+            <a class="nav-item nav-link active" href="{% url 'logout' %}"> Logout </a>
         </div>
     </nav>
 
